# w2t25

./: metadata.json  run_tests.sh
.tmp/: audit_report-01-fix_check.md  audit_report-01.md  audit_report-02-fix_check.md  audit_report-02.md  test_coverage_and_readme_audit_report.md
docs/: api-spec.md  design.md  questions.md
repo/: .gitignore  Cargo.toml  README.md  docker-compose.yml  run_tests.sh
repo/backend/: Cargo.toml  Dockerfile  docker-entrypoint.sh
repo/backend/API_TESTS/: api_admin_users_payload_tests.rs  api_auth_payload_tests.rs  api_authorization_tests.rs  api_backups_reports_tests.rs  api_checkins_tests.rs  api_config_tests.rs  api_logs_tests.rs  api_notifications_payload_tests.rs  api_orders_tests.rs  api_preferences_tests.rs  api_products_tests.rs  api_users_tests.rs
repo/backend/e2e_tests/: e2e_workflow_tests.rs
repo/backend/src/: config.rs  db.rs  errors.rs  lib.rs  main.rs
repo/backend/src/middleware/: auth.rs
repo/backend/src/models/: mod.rs  role.rs  session.rs  user.rs
repo/backend/src/routes/: admin.rs  auth.rs  backups.rs  checkins.rs  config_routes.rs  logs.rs  mod.rs  notifications.rs  orders.rs  preferences.rs  products.rs  reports.rs  users.rs
repo/backend/src/services/: auth.rs  backup.rs  commerce.rs  masking.rs  mod.rs  notifications.rs  reports.rs  scheduler.rs
repo/backend/tests/: admin_scope_tests.rs  api_authorization_tests.rs  commerce_tests.rs  e2e_workflow_tests.rs  hardening_tests.rs  schema_integrity_tests.rs
repo/config/: default.env
repo/frontend/: Cargo.toml  Dockerfile  index.html  nginx.conf
repo/frontend/frontend_tests/: frontend_logic_tests.rs  store_display_tests.rs
repo/frontend/src/: app.rs  lib.rs  main.rs  router.rs  state.rs
repo/frontend/src/api/: admin_ops.rs  auth.rs  checkins.rs  client.rs  mod.rs  notifications.rs  preferences.rs  store.rs
repo/frontend/src/components/: layout.rs  mod.rs  nav.rs  quick_lock.rs
repo/frontend/src/pages/: admin_backups.rs  admin_config.rs  admin_deletion_requests.rs  admin_kpi.rs  admin_logs.rs  admin_orders.rs  admin_products.rs  admin_reports.rs  admin_users.rs  checkin.rs  checkin_review.rs  inbox.rs  login.rs  mod.rs  orders.rs  preferences.rs  store.rs  unauthorized.rs
repo/frontend/src/pages/home/: admin.rs  mod.rs  parent.rs  staff.rs  student.rs  teacher.rs
repo/migrations/: 001_users_roles.sql  002_org_hierarchy.sql  003_checkins.sql  004_commerce.sql  005_notifications.sql  006_config.sql  007_audit_logs.sql  008_reports_backups.sql  009_login_attempts.sql  010_user_preferences.sql  011_commerce_additions.sql  012_hardening.sql  013_login_lockouts.sql  014_admin_scopes.sql  (+1 more)
sessions/: bugfix-1.json  bugfix-2.json  develop-1.json  develop-2.json  develop-3.json  develop-4.json
tmp/: audit_report-01-fix_check.md  audit_report-01.md  audit_report-02.md
(+1 files in other folders)
