[workspace]

[package]
name = "meridian-frontend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "meridian-frontend"
path = "src/main.rs"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Storage",
    "console",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "EventTarget",
    "Event",
    "MouseEvent",
    "KeyboardEvent",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
    "HtmlInputElement",
] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde", "js"] }
gloo = { version = "0.11", features = ["storage", "timers", "net"] }
gloo-net = "0.6"
gloo-storage = "0.3"
gloo-timers = "0.3"
log = "0.4"
wasm-logger = "0.2"
